--- a/_data/albums.yml
+++ b/_data/albums.yml
@@ -1,15 +1,15 @@
 - name: "Twenty One Pilots"
-  image: "/assets/images/albums/twenty-one-pilots-cover.jpg"
+  image: "/assets/images/albums/twenty-one-pilots-cover.png"
 - name: "Regional At Best"
-  image: "/assets/images/albums/regional-at-best-cover.jpg"
+  image: "/assets/images/albums/regional-at-best-cover.png"
 - name: "Vessel"
-  image: "/assets/images/albums/vessel-cover.jpg"
+  image: "/assets/images/albums/vessel-cover.png"
 - name: "Blurryface"
-  image: "/assets/images/albums/blurryface-cover.jpg"
+  image: "/assets/images/albums/blurryface-cover.png"
 - name: "Trench"
-  image: "/assets/images/albums/trench-cover.jpg"
+  image: "/assets/images/albums/trench-cover.png"
 - name: "Scaled And Icy"
-  image: "/assets/images/albums/scaled-and-icy-cover.jpg"
+  image: "/assets/images/albums/scaled-and-icy-cover.png"
 - name: "Clancy"
   image: "/assets/images/albums/clancy-cover.png"
 - name: "Singles & Other Tracks"
